<resources>
    <string name="app_name">EzKart</string>
    <string name="homeToolBar">homeToolBar</string>
    <string name="item_description">Item Description :</string>
    <string name="product_review">Product Review:</string>
    <string name="shareMsg">Checkout this product that I found in Ekart,</string>
    <string name="yes">Yes</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="amount">price</string>
    <string name="no_search_data">No Search Data</string>
    <string name="no_data">Product Not Available</string>
    <string name="phones">Phone</string>
    <string name="laptops">Laptop</string>
    <string name="tablets">Tablet</string>
    <string name="queries">Queries</string>
    <string name="settings">Settings</string>
    <string name="orders">Orders</string>
    <string name="order">orders</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="price">Total Price : %1$s</string>
    <string name="lengthMsg">Not enough characters</string>
    <string name="DigitMsg">Not enough digits in the password..Weak Password</string>
    <string name="letterMsg">Not enough letter in the password..Weak Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Ph Number with code</string>
    <string name="logout">Logout</string>
    <string name="usernameedit">Username:</string>
    <string name="emailedit">Email</string>
    <string name="phone_numberedit">Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_update">Profile Update</string>
    <string name="to_continue_please_enter_password">To continue please enter password.You will be logged out . Please Sign in with new Email</string>
    <string name="hey">Hey! %1$s</string>
    <string name="carts">Cart</string>
    <string name="cart">Cart</string>
    <string name="payments">Payments</string>
    <string name="helpline">Helpline</string>
    <string name="select_your_language">Select Your Language</string>
    <string name="english">English</string>
    <string name="malayalam">Malayalam</string>
    <string name="account_settings">Account Settings</string>
    <string name="profile_image">Profile Image</string>
    <string name="Gallery">Gallery\n</string>
    <string name="Camera">Camera</string>
    <string name="checkout_form">Checkout Form:</string>
    <string name="total_amount_to_be_paid">Total Amount to be paid : %1$.02f</string>
    <string name="Continuenpay">Continue and Pay</string>
    <string name="checkout">Checkout</string>
    <string name="billing_address">Billing Address\n</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="cancel_your_order">Cancel your Order?</string>
    <string name="cancelOrder">Are you sure you want to cancel the order.If yes amount will be refunded to yout account</string>
    <string name="edit_order">Edit Order</string>
    <string name="validate">Validate</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don"t have an account? Sign Up</string>
    <string name="search_for_products">Search for products</string>
    <string name="signup">SignUp</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="ordered_date">Ordered Date: %1$s</string>
    <string name="delivery_date">Delivery Date: %1$s</string>
    <string name="outdelivery">Out for Delivery</string>
    <string name="heyDefault">Hey !</string>
    <string name="tocart">toCart</string>
    <string name="add_items_to_cart_first">Add items to cart first</string>
    <string name="details_loading">Details Loading</string>
    <string name="homesearch">homeSearch</string>
    <string name="toprofile">toProfile</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="invalid_credentials_try_again">Invalid Credentials..Try Again</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="forgot_password_reset_password">Forgot Password? Reset Password</string>
    <string name="check_your_mail">Check your mail for password reset link</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email_linked_to_ekart">Enter your Email linked to EKart</string>
    <string name="credential_already_in_use">Credential already in use</string>
    <string name="credentials_not_valid">Credentials not valid</string>
    <string name="added_to_cart">Added To Cart</string>
    <string name="connection_unavailable">Connection Unavailable</string>
    <string name="connection_losing">Connection Losing</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="search_meaningful_text">Search meaningful text</string>
    <string name="please_wait">Please Wait</string>
    <string name="data_updated">Data Updated</string>
    <string name="no_offers_available_for_this_category">No offers available for this category</string>
    <string name="no_results_for_your_search">No results for your search</string>
    <string name="data_from_local_is_null">""</string>
    <string name="offerZone">Offer Zone</string>
    <string name="con">Continue</string>
    <string name="enjoy_shopping">Enjoy Shopping</string>
    <string name="welcome_to_ekart">Welcome to EKart</string>
    <string name="new_products">"New Products Added\nCheck them out "</string>
    <string name="completeProfileMsg">Please complete\nyour\n User Profile</string>
    <string name="discountText">- %1$s %</string>
    <string name="applyCoupon">Apply </string>
    <string name="view_available_coupons">View available coupons</string>
    <string name="no_available_coupons">No Available coupons</string>
    <string name="addCoupon">Add Coupon\n</string>
    <string name="select_a_coupon_first">Enter a valid coupon </string>
    <string name="coupon_applied">Coupon Applied</string>
    <string name="delivery_coupon_applied">Delivery coupon applied</string>
    <string name="track_order">Track Order</string>
    <string name="location_info">Your Product is at  %1$s</string>
    <string name="deliveryLocation">Delivery Location</string>
    <string name="enter_valid_delivery_address">Enter valid address</string>
    <string name="product_mrp">Product MRP</string>
    <string name="location_not_updated">Location not updated</string>
    <string name="grant_location_permission">Grant Location permission</string>
    <string name="review_product">Review Product</string>
    <string name="enter_your_delivery_experience">Enter your delivery experience</string>
    <string name="enter_your_product_experience">Enter your product experience</string>
    <string name="view_more">View More</string>
    <string name="anonymous">Anonymous</string>
    <string name="ekart_review_points"> Review History</string>
    <string name="you_have_done_7_ekart_reviews">You have done %1$s EKart Reviews</string>
    <string name="customer_qeuries">Customer Qeuries</string>
    <string name="enter_your_query">Enter your query</string>
    <string name="order_id">Order Id:</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_user">Delete Account</string>
    <string name="sendOtp">Send Otp</string>
    <string name="resendOtp">Resend Otp</string>
    <string name="enterotp">Enter OTP</string>
    <string name="talk_with_a_representative">Customer Care</string>
    <string name="executive_is_being_assigned_to_you">A EzKart executive is being assigned to you</string>
</resources>