<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payments.ProductCheckoutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/buttonColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonColor"
                android:src="@drawable/baseline_arrow_back_ios_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/destText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:textSize="24sp"
                android:text="@string/checkout"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/backButton" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:layout_below="@id/toolbar"
        android:paddingRight="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkOutText"
        android:text="@string/checkout_form"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>
        <RelativeLayout
            android:id="@+id/productList"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:background="@drawable/checkout_page_layout"
            android:layout_below="@id/checkOutText">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/productListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/totalPrice"
            android:layout_below="@id/productList"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:textSize="22sp"
            android:text="@string/total_amount_to_be_paid"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/formText"
            android:layout_below="@id/totalPrice"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="22sp"
            android:text="@string/billing_address" />
        <EditText
            android:id="@+id/editTextUsername"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:layout_below="@id/formText"
            android:hint="@string/name"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edittext_layout"
            android:inputType="text" />
        <EditText
            android:id="@+id/editTextPhone"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:layout_below="@id/editTextUsername"
            android:hint="@string/phone_number"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edittext_layout"
            android:inputType="text" />
        <EditText
            android:id="@+id/editTextAddress"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:layout_below="@id/editTextPhone"
            android:hint="@string/address"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edittext_layout"
            android:inputType="text" />

        <Button
            android:id="@+id/PaymentBtn"
            android:layout_width="wrap_content"
            android:layout_below="@id/editTextAddress"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/Continuenpay"
            android:textSize="20dp"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</RelativeLayout>
</ScrollView>
</layout>