<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="productOrderModel"
            type="com.example.firebaseecom.model.ProductOrderModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartOrder.ProductOrderViewActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/homeToolBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/buttonColor"
        android:backgroundTint="@color/buttonColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="5dp">

            <ImageButton
                android:id="@+id/navPop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:src="@drawable/baseline_arrow_back_ios_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.MaterialToolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/homeToolBar">

        <RelativeLayout
            android:id="@+id/productLayout"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:layout_height="180dp"
            android:background="@drawable/checkout_page_layout">
            <ImageView
                android:id="@+id/productImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"/>
            <TextView
                android:id="@+id/titleText"
                android:layout_marginTop="40dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/productImage"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@{Integer.toString(productOrderModel.component5())}"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/productImage"
                android:layout_below="@id/titleText"/>

        </RelativeLayout>
        <TextView
            android:id="@+id/orderedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ordered_date"
            android:textSize="22dp"
            android:layout_below="@id/productLayout"
            />
        <RelativeLayout
            android:id="@+id/progressLine"
            android:layout_width="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_below="@id/orderedDate"
            android:background="@color/buttonColor"
            android:layout_height="50dp"/>
        <TextView
            android:id="@+id/orderStatus"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="22dp"
            android:layout_below="@id/progressLine"
            />
        <RelativeLayout
            android:id="@+id/progressLine2"
            android:layout_width="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_below="@id/orderStatus"
            android:background="@color/black"
            android:layout_height="50dp"/>
        <TextView
            android:id="@+id/deliverDate"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/delivery_date"
            android:textSize="22dp"
            android:layout_marginBottom="30dp"
            android:layout_below="@id/progressLine2"
            />
        <Button
            android:id="@+id/trackButton"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/deliverDate"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/track_order" />
        <Button
            android:id="@+id/reviewButton"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_below="@+id/deliverDate"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/review_product" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    </layout>